--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,9 @@
 	  <script type="text/javascript" src="js/lib/require.js"></script>
 	</head>
 	<body>
+	
+
+		<script type="text/javascript" src="js/main.js"></script>
+
 	</body>
 </html>
