--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>node and google</title>
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	  <script type="text/javascript" src="js/lib/require.js"></script>
 	</head>
